# rust-lightning-workshop

./: .env  Cargo.toml  README.md
src/: lightning.rs  main.rs  routes.rs
static/: main.js
templates/: index.html.hbs  layout.html.hbs
